loading overlap fix

--- a/src/app/pages/table/data-table/data-table.component.scss
+++ b/src/app/pages/table/data-table/data-table.component.scss
@@ -20,10 +20,14 @@
   position: absolute;
   inset: 0;
   background: color.adjust(map.get(v.$neutral-palette, 100), $alpha: -0.6);
-  z-index: 101;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
+}
+
+.paginator {
+  z-index: 2;
 }
 
 .limit-reached-info {
